tests/compile-fail/integration__integration__general__arg_count_fixed.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: wrong number of arguments to 'posKeyframe'
   ┌─ <input>:22:9
   │
22 │         posKeyframe(0f, 0f, 0f, 0f);
   │         ^^^^^^^^^^^ expects 3 arguments, got 4


